--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Detect browser (Chrome, IE, Firefox etc...) Developer Tools (Console) is opened",
   "main": "src/index.ts",
   "scripts": {
+    "clean": "shx rm -rf _bundles lib",
+    "build": "npm run clean && tsc && webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,7 +22,11 @@
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-stage-0": "^7.0.0",
     "babel-core": "^6.26.3",
+    "ts-loader": "^5.3.0",
     "tslint": "^5.11.0",
-    "tslint-config-airbnb": "^5.11.0"
+    "tslint-config-airbnb": "^5.11.0",
+    "typescript": "^3.1.6",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2"
   }
 }
