--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-stage-0": "^7.0.0",
     "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
     "ts-loader": "^5.3.0",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.0",
