--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "typescript": "^3.1.6",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "shx": "^0.3.2"
   }
 }
