--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,12 @@
     "module": "commonjs",
     "target": "es5",
     "sourceMap": true,
-    "lib": ["es2015", "dom"],
+    "lib": ["es2015", "dom", "es2015.reflect"],
     "outDir": "lib",
     "declaration": true,
-    "sourceRoot": "src"
+    "sourceRoot": "src",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "exclude": [
     "node_modules"
