Fix project name

--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "detect-browser-devtools",
+  "name": "browser-detect-devtools",
   "version": "1.0.0",
   "description": "Detect browser (Chrome, IE, Firefox etc...) Developer Tools (Console) is opened",
-  "main": "src/index.ts",
   "scripts": {
     "clean": "shx rm -rf _bundles lib",
     "build": "npm run clean && tsc && webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "lib"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dsa28s/detect-browser-devtools.git"
