--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "browser-detect-devtools",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "Detect browser (Chrome, IE, Firefox etc...) Developer Tools (Console) is opened",
   "scripts": {
     "clean": "shx rm -rf _bundles lib",
@@ -8,8 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "files": [
-    "lib", "dist"
+    "lib",
+    "dist"
   ],
+  "main": "lib/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dsa28s/detect-browser-devtools.git"
